<resources>
    <string name="title_activity_maps">Map</string>
    <string name="app_name">Callgate</string>
    <string name="title_activity_maps3">Map</string>
    <string name="turn_on_gps"> please turn on gps</string>
    <string name="turn_on_network"> please turn on network</string>
    <string name="start_drive"> start drive</string>
    <string name="gate_name">gate name</string>
    <string name="phone_number">phone number</string>
    <string name="choose_contact">choose contact</string>
    <string name="add">add</string>
    <string name="search_contact">search contact</string>
    <string name="stop_Driving">Stop Driving</string>
    <string name="stop">Stop</string>
    <string name="searching_for_closed_gate">Looking for nearby gates</string>
    <string name="running_in_the_background">The app will close and run on the background</string>
    <string name="delete">Do you want to delete: </string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="please_choose_name">Please choose name</string>
    <string name="choose_phone_number">Please choose phone number</string>
    <string name="radius_set_to">radius set to:</string>
    <string name="click_on_map">please short click on the inorder to add gates</string>
    <string name="checkall">check all</string>
    <string name="share">share</string>
    <string name="save">save</string>
    <string name="languate_title">language</string>
    <string name="background_massage">Message before start driving </string>
    <string name="user_preferences">user preferences</string>
    <string name="back_grand_message_summorty_disable">click inorder to disable the start driving message</string>
    <string name="back_grand_message_summorty_enable">click inorder to enable the start driving message</string>
    <string name="action_settings"> action settings</string>
    <string name="register_devices">register devices</string>
    <string name="paired_devices">unregister devices</string>
    <string name="wating_for_car">waiting for bluetooth connection</string>
    <string name="gate_open_in">open in:</string>
    <string name="gate_close_in">close in:</string>
    <string name="night">night</string>
    <string name="day">day</string>
    <string name="sunday">su</string>
    <string name="monday">mo</string>
    <string name="tuesday">tu</string>
    <string name="wednesday">we</string>
    <string name="thursday">th</string>
    <string name="friday">fr</string>
    <string name="saturday">sa</string>
    <string name="radius">radius:</string>
    <string name="open24h">open 24h</string>
    <string name="close24h">close 24h</string>
    <string name="closeAtDay">day</string>
    <string name="closeAtNight">night</string>
    <string name="weekend_time">when is the gate closed weeekends?</string>
    <string name="week_days">when is the gate closed weekdays?</string>
    <string name="configure_time">configure time</string>
    <string name="other">other</string>
    <string name="click_here">click here</string>
    <string name="gate_open_at">open at: </string>
    <string name="gate_close_at">close at: </string>
    <string name="choose_gate_mode"> please configure time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="choose_open_time">please add a time when the gate is open</string>
    <string name="choose_closing_time">please add a time when the gate is closed</string>
    <string name="choose_time">enter time</string>
    <string name="waiting_for_gate">all gates are open, waiting for closed gate in</string>
    <string name="SignBluetoothDevice">choose your car\'s bluetooth device</string>
    <string name="turn_on_bluetoth">please turn on bluetooth</string>
    <string name="dont_have_bluetooth">I don\'\t have bluetooth</string>
    <string name="settings">Settings</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="main">Main</string>
    <string name="nav_app_bar_open_drawer_description">main layout</string>
    <string name="close_drawer">closed drawer</string>
    <string name="delete_big_letters">DELETE</string>
    <string name="item_removed">One item removed</string>
    <string name="undo">undo</string>
    <string name="update">Update</string>
    <string name="automating_is_the_future">Automating is the future</string>
    <string name="my_gates">My gates</string>
    <string name="next">next</string>
    <string name="share_failed">Share Failed, please try again</string>
    <string name="time_configuration">Time Configuration</string>
    <string name="later">later</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_me_to_settings">take me to settings</string>
    <string name="inoreder_to_enable_that_permision_click_on_settings_and_and_click_on_permmisions_and_then_enable_popup_windows">Inoreder to enable that permision click on settings and and click on permmisions and then enable popup windows</string>
    <string name="popup_permmisions_may_be_disabled">Popup permmisions may be disabled</string>
    <string name="click_on_the_map_to_set_your_gate_location">click on the map to set your gate location</string>
    <string name="title_activity_neo_time_configuration">NeoTimeConfigurationActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <!-- Preference Titles -->

</resources>
