<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="15dp"

    android:layout_height="wrap_content"
    tools:context=".BlankFragment">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardCornerRadius="5dp"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/include6"
            layout="@layout/appbar"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="15dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/inoreder_to_enable_that_permision_click_on_settings_and_and_click_on_permmisions_and_then_enable_popup_windows"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include6" />

        <Button
            android:id="@+id/button_sheet_fragmeent_take_me_to_setingts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="107dp"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/white"
            android:text="@string/take_me_to_settings"
            android:textColor="@color/blacktint56"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <Button
            android:id="@+id/button_sheet_fragmeent_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/cancel"
            android:textColor="@color/blacktint56"
            app:layout_constraintBottom_toBottomOf="@+id/button_sheet_fragmeent_take_me_to_setingts"
            app:layout_constraintEnd_toStartOf="@+id/button_sheet_fragmeent_take_me_to_setingts"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/button_sheet_fragmeent_take_me_to_setingts" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>